--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@actions/http-client": "^2.2.3"
   },
   "devDependencies": {
