--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@actions/http-client": "^2.2.3"
+    "@actions/http-client": "^2.2.3",
+    "zod": "^3.23.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
